# NightWatch

./: Cargo.toml  build.rs
src/: main.rs
ui/: main.slint  self-widget.slint
ui/pages/: home.slint  pricer.slint  settings.slint
ui/sleek-ui/widgets/button/: button.slint
ui/sleek-ui/widgets/icon-button/: icon-button.slint
